# vulnray

./: .gitignore  README.md  pyproject.toml  requirements.txt  vuln-scan-prd.md
scripts/: bench.py  vulnllm-scan
slides/: slides.md
tests/: model_utils.py  test_bench.py  test_chunking.py  test_cli_progress.py  test_config.py  test_embedded_vuln_samples.py  test_export_code.py  test_llama_backend.py  test_model_paths.py  test_multipass.py  test_prompt.py  test_reporting.py  test_scanner.py  test_tutorial.py
tests/fixtures/: sample_vuln.c
tests/fixtures/embedded_vulns/: buffer_boundaries.c  integer_dma.c  memory_lifecycle.c
tutorial/: README.md  vulnllm.toml  vulnray.toml
tutorial/test_project/: main.c  scan_skip_prototypes.h  user_store.c
tutorial/test_project/include/: user_store.h
vulnllm/: cli.py  config.py  export_code.py
vulnllm/chunking/: ast_chunker.py  function_chunker.py  sliding_chunker.py
vulnllm/findings/: deduplicator.py  model.py  severity.py
vulnllm/indexing/: call_graph.py  project_index.py  symbol_table.py
vulnllm/inference/: llama_backend.py  multipass.py  parameters.py
vulnllm/prompt/: base_prompt.py  focus_injector.py
vulnllm/prompt/profiles/: embedded_c.py
vulnllm/reporting/: csv_report.py  json_report.py  markdown_report.py  summary.py
vulnllm/scanner/: file_scanner.py  language_filter.py  size_filter.py
vulnllm/utils/: logging.py  model_paths.py  progress.py
